<resources>
    <string name="app_name">Aplicativo5-Subtrair</string>
    <string name="msgTitulo">Calcular</string>
    <string name="msgOperador1">Primeiro Operador</string>
    <string name="msgOperador2">Segundo Operador</string>
    <string name="msgResultado">Resultado da Operação</string>
    <string name="msgHintOperador1">Informe o operando 1</string>
    <string name="msgHintOperador2">Informe o operando 2</string>

    <string name="msgSubtrair">-</string>
    <string name="msgSoma">+</string>
    <string name="msgDivisao">/</string>
    <string name="msgMuliplicacao">X</string>
    <string name="msgLimpar">C</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnIgual">=</string>
    <string name="btnPonto">.</string>
</resources>